create a conection dataset and dependency injection

--- a/00_APP_TO_DO_LIST/APP_TO_DO_LIST/appsettings.json
+++ b/00_APP_TO_DO_LIST/APP_TO_DO_LIST/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MySQLConection": {
+    "MySQLConectionString": "Serve=locahost, DataBase=to_do_list, Uid=root, Pwd=MySQL$3675@gb"  // makes conection with database
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
