--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/1b983355-c165-4be1-ba62-da272ad4772c.vsidx
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/d2f2462a-b181-41a0-bb50-7a0202f9e68a.vsidx
