--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@
 
 /00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/1b983355-c165-4be1-ba62-da272ad4772c.vsidx
 /00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/d2f2462a-b181-41a0-bb50-7a0202f9e68a.vsidx
+/.vs/gabriel/v17
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/024cee10-69cb-4138-aa25-a91f7272050b.vsidx
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/0de74942-28c1-4c59-89eb-c90daef41ff5.vsidx
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/490cc18d-b4f2-4cf2-965a-ffcefbeebff8.vsidx
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/f9d0a032-04f9-4bc9-8d83-2ba207261bfd.vsidx
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/fc07c6fb-ad18-4ee8-ba82-881b27692db8.vsidx
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/APP_TO_DO_LIST.csproj.nuget.dgspec.json
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/APP_TO_DO_LIST.csproj.nuget.g.props
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.AssemblyInfo.cs
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.AssemblyInfoInputs.cache
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.assets.cache
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.csproj.AssemblyReference.cache
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.GeneratedMSBuildEditorConfig.editorconfig
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/project.assets.json
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/project.nuget.cache
