--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 
 /00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/1b983355-c165-4be1-ba62-da272ad4772c.vsidx
 /00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex/d2f2462a-b181-41a0-bb50-7a0202f9e68a.vsidx
+*.wsuo
+*.json
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/FileContentIndex
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.AssemblyInfo.cs
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.AssemblyInfoInputs.cache
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.assets.cache
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.csproj.AssemblyReference.cache
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.GeneratedMSBuildEditorConfig.editorconfig
