sove exception in 'UseMysql' call

--- a/00_APP_TO_DO_LIST/APP_TO_DO_LIST/appsettings.json
+++ b/00_APP_TO_DO_LIST/APP_TO_DO_LIST/appsettings.json
@@ -1,7 +1,12 @@
 {
-  "MySQLConection": {
-    "MySQLConectionString": "Serve=locahost, DataBase=to_do_list, Uid=root, Pwd=MySQL$3675@gb"  // makes conection with database
+  "MySQLConnection": {
+    "MySQLConnectionString": "Server=localhost;DataBase=to_do_list;Uid=root;Pwd=MySQL$3675@gb"
   },
+
+  /*{
+    "MySQLConnection": {
+      "MySQLConnectionString": "Server=localhost,DataBase=to_do_list,Uid=root,Pwd=MySQL$3675@gb"
+    },*/
 
   "Logging": {
     "LogLevel": {
