--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.GeneratedMSBuildEditorConfig.editorconfig
 /00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.AssemblyInfo.cs
 /.vs/VSWorkspaceState.json
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.metadata.v8.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.projects.v8.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v8.bin
