--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,22 @@
 /00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.metadata.v8.bin
 /00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.projects.v8.bin
 /00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v8.bin
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/v17/.suo
+*.json
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/v17/DocumentLayout.json
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/bin/Debug/net8.0/APP_TO_DO_LIST.dll
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/bin/Debug/net8.0/APP_TO_DO_LIST.exe
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/bin/Debug/net8.0/APP_TO_DO_LIST.pdb
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/ref/APP_TO_DO_LIST.dll
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/refint/APP_TO_DO_LIST.dll
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/apphost.exe
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.csproj.CoreCompileInputs.cache
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/APP_TO_DO_LIST.csproj.nuget.dgspec.json
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/APP_TO_DO_LIST.csproj.nuget.g.props
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.csproj.FileListAbsolute.txt
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.dll
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.genruntimeconfig.cache
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.pdb
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/Debug/net8.0/APP_TO_DO_LIST.sourcelink.json
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/project.assets.json
+/00_APP_TO_DO_LIST/APP_TO_DO_LIST/obj/project.nuget.cache
