--- a/00_APP_TO_DO_LIST/APP_TO_DO_LIST/Properties/launchSettings.json
+++ b/00_APP_TO_DO_LIST/APP_TO_DO_LIST/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/{todolist}/v1",
+      //"launchUrl": "api/todolist/v1",
       "applicationUrl": "http://localhost:5123",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/todolist/v1",
+      //"launchUrl": "api/todolist/v1",
       "applicationUrl": "https://localhost:7056;http://localhost:5123",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/todolist/v1",
+     // "launchUrl": "api/todolist/v1",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
