10/02 finalizando as tarefas do git **lista de tarefas não aparece no database

--- a/00_APP_TO_DO_LIST/APP_TO_DO_LIST/appsettings.json
+++ b/00_APP_TO_DO_LIST/APP_TO_DO_LIST/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySQLConnection": {
-    "MySQLConnectionString": "Server=localhost;DataBase=app_to_do_list;Uid=root;Pwd=MySQL$3675@gb"
+    "MySQLConnectionString": "Server=localhost;DataBase=app_to_do_list;Uid=root;Pwd=Sql$3675"
   },
 
   /*{
