--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,7 @@ $RECYCLE.BIN/
 
 _NCrunch*
 /.vs/Codigo_Mais _Novo/v17
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/DesignTimeBuild/.dtbcache.v2
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/v17/.futdcache.v2
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.metadata.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.projects.v9.bin
