--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,7 @@ _NCrunch*
 /00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/v17/.futdcache.v2
 /00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.metadata.v9.bin
 /00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.projects.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v9.bin
