--- a/00_APP_TO_DO_LIST/APP_TO_DO_LIST/APP_TO_DO_LIST.csproj
+++ b/00_APP_TO_DO_LIST/APP_TO_DO_LIST/APP_TO_DO_LIST.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="Refit" Version="8.0.0" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
