Criar relação entre as tabelas (#4)
* change gitignore

* testes

* Refactoring Business anda Repository

* 23/01

* 10/02 finalizando as tarefas do git
**lista de tarefas não aparece no database

* Change the FindById method to GetById
Refactoring method FindAll

* deleting commented methods

* adjustingmethod FindAll

* adjustingmethod FindAll

* create Existis method

* change pc

* Crate Cep Controller

---------

Co-authored-by: Gabriel Barbosa <gabrielrsbarbosa@outlook.com>

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,12 @@ $RECYCLE.BIN/
 .DS_Store
 
 _NCrunch*
+/.vs/Codigo_Mais _Novo/v17
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/DesignTimeBuild/.dtbcache.v2
+/00_APP_TO_DO_LIST/.vs/APP_TO_DO_LIST/v17/.futdcache.v2
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.metadata.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.projects.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v9.bin
+/00_APP_TO_DO_LIST/.vs/ProjectEvaluation/app_to_do_list.strings.v9.bin
